# indory-robot-runtime

./: .gitignore  LICENSE  Protocol.md  README.md  environment.compute.yml  environment.yml  run_xlerobot_robot_io.sh  run_xlerobot_rosbridge_io.sh  setup.bash  setup.zsh
docs/: fast_protocol.md  interfaces.md
robot/: check_robot_io_env.sh  setup_robot_io_pi5.sh  xlerobot_robot_io.env.example  xlerobot_rosbridge_io.py
robot_io/: __init__.py  xlerobot_fast_io.py
ros_bridge/: __init__.py  isaac_compat_gateway.py  start_pi_isaac_compat_gateway.sh  webview_monitor.py  ws_client.py
scripts/: indoory_live_stack.sh  indoory_pi_live_service.sh  pi_isaac_compat_gateway.py  start_external_zmq_streams.sh  start_pi_isaac_compat_gateway.sh
src/indoory_xlerobot_bridge/: package.xml  setup.cfg  setup.py
src/indoory_xlerobot_bridge/config/: isaac_sim_bridge.yaml  nav2_params.yaml
src/indoory_xlerobot_bridge/indoory_xlerobot_bridge/: isaac_sim_zmq_bridge.py
src/indoory_xlerobot_bridge/launch/: foxglove.launch.py  isaac_bridge.launch.py  nav2.launch.py
tools/: __init__.py  arms_head_tf_debug_webview.py  camera_format_benchmark.py  camera_mapping_debug_webview.py  camera_zmq_optimized_proxy.py  fast_robot_client.py  head_motor_webtest.py  ik_solver.py  ik_webview.py  pi_ik_proxy.py  rgb_rgbd_combined_sidechannel.py  rgbd_zmq_optimized_publisher.py  robot_webview.py  tf_links_3d_webview.py
