<?xml version="1.0"?>
<package format="3">
  <name>indoory_xlerobot_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge for indoory_isaac_sim ZMQ clients.</description>
  <maintainer email="pi@localhost">pi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-msgpack</exec_depend>
  <exec_depend>python3-zmq</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
